# Real-Time-Animation

./: README.md
Assignment 1/: CMakeLists.txt
Assignment 1/headers/: mesh.h  model.h
Assignment 1/shaders/: basic.vert
Assignment 1/src/: main.cpp
